# gallery-ts

./: CMakeLists.txt  DATASETS.md  README.md  env.sh
config/: nue_sel.json
doc/: Doxyfile
src/: CMakeLists.txt  Config.cxx  Config.hh  Covariance.cxx  Covariance.hh  CovarianceMain.cxx  Event.cxx  Event.hh  Main.cxx  ProcessorBase.cxx  ProcessorBase.hh  ProcessorBlock.hh  Selections.hh  TruthSelection.cxx  TruthSelection.hh  linkdef.h
