cmake_minimum_required(VERSION 2.8)
project(ts)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR} CACHE PATH "default install path" FORCE )
endif()

set(BUILD_SHARED_LIBS ON)

list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
find_package(ROOT REQUIRED COMPONENTS RIO Net)
include(${ROOT_USE_FILE})

include_directories(${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(src)

file(WRITE ${CMAKE_INSTALL_PREFIX}/bin/setup_ts.sh
"export TS_ANALYSIS_DIR=${CMAKE_INSTALL_PREFIX}
export TS_LIB_DIR=$TS_ANALYSIS_DIR/lib
export LD_LIBRARY_PATH=$TS_LIB_DIR:$LD_LIBRARY_PATH
export PATH=$TS_ANALYSIS_DIR/bin:$PATH")

